2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/groups/group_list.php: moved check ACL bottom the ajax call and
	added other check ACL in the ajax call.
	
	Fixes: #3180588

2011-02-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	* include/functions_html.php: print_input_image function now uses skins.
	* godmode/users/configure_profile.php: Added some variable initialization after
	selectinf a defined profile.

	Fixes: #3182041

2011-02-05 Javier Lanz <javier.lanz@artica.es>
	* pandora_console/images/wand_sla.png: Added sla wizard tab icon

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fixed the module search.
	
	Fixes: #3181086

2011-02-14 Javier Lanz <javier.lanz@artica.es>
	* godmode/reporting/reporting_builder.main.php: Table size changed to 90%
	* godmode/reporting/reporting_builder.item_editor.php: Fixed a small
	problem with an old field

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php, include/api.php, godmode/setup/setup.php:
	added the check by password the actions on API.
	
	Pending tasks: #3180793

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fixed the include of extensions, mysql or
	postgresql for the api call or Pandora Mobile.

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php: fixed in function "postgresql_insert_id" the
	lost var. Erased traces in the function "postgresql_process_sql". Added
	function "postgresql_escape_string_sql".
	
	* include/db/mysql.php: fixed duplicated function "mysql_process_sql". And
	added function "mysql_escape_string_sql".
	
	* include/auth/mysql.php: added method to autenticate with postgreSQL.
	
	* include/functions_db.php: added functions "select_db_engine",
	"connect_db". And divided the function "escape_string_sql" into avaliable
	engines.

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	* include/db/postgresql.php, include/db/mysql.php,